--- a/app/views/ftf/_includes/activity-list_status-block.html
+++ b/app/views/ftf/_includes/activity-list_status-block.html
@@ -126,4 +126,12 @@
     Your reporting is due by 11:59pm on <strong>30 March 2030</strong>.
 </div>
 
+{% elif (data['status'] == "08") %}
+<!-- Status after change request -->
+
+<h3 class="govuk-heading-m">Grant funding agreement change request under review</h3>
+<div class="govuk-inset-text">
+    RPA should complete the review by <strong>24 August 2024</strong>.
+</div>
+
 {% endif %}
