--- a/app/views/ftf/index.html
+++ b/app/views/ftf/index.html
@@ -45,6 +45,11 @@
     <p class="govuk-body"><a href="monitoring/v1-0_y5/">Click to open prototype</a></p>
 
     <hr style="margin: 40px 0;">
+    <p class="govuk-body"><strong>Change request</strong></p>
+    <p class="govuk-body"><a href="activity-list/v3-0/index?status=03&eoi=03b&apply=03b&agree=02a&claim-01=01&claim-02=0&claim-03=0" target="_blank">Click to open prototype</a></p>
+
+
+    <hr style="margin: 40px 0;">
     <p class="govuk-body"><strong>Activity list</strong> Alternate designs</p>
     <p class="govuk-body"><a href="activity-list/v3-0/index-design-variant-01?scenario=application&status=01a&eoi=01&apply=01&agree=01" target="_blank">Design variant 1</a></p>
     <p class="govuk-body"><a href="activity-list/v3-0/index-design-variant-02?scenario=application&status=01a&eoi=01&apply=01&agree=01" target="_blank">Design variant 2</a></p>
