--- a/app/views/ftf/activity-list/v3-0/index.html
+++ b/app/views/ftf/activity-list/v3-0/index.html
@@ -61,6 +61,15 @@ Water Management Grant - Round 3
 {% endif %}
 
 
+<div class="app-contact-panel">
+  <h2 class="app-contact-panel__heading">Need help?</h2>
+
+  <p class="govuk-body app-contact-panel__body">
+    <a class="govuk-link" href="../../change-request/help-triage">Contact the team</a>
+  </p>
+</div>
+
+
 
 </div>
 </div>
