change request - pass data

--- a/app/views/ftf/change-request/check-answers.html
+++ b/app/views/ftf/change-request/check-answers.html
@@ -44,7 +44,7 @@
                       What do you need help with?
                     </dt>
                     <dd class="govuk-summary-list__value">
-                      {{ data['needHelp'] }}
+                      {{ data['need-help'] }}
                     </dd>
                     <dd class="govuk-summary-list__actions">
                       <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> name</span></a>
