--- a/app/views/ftf/change-request/help-triage.html
+++ b/app/views/ftf/change-request/help-triage.html
@@ -55,19 +55,19 @@
                 </legend>
                 <div class="govuk-radios" data-module="govuk-radios">
                   <div class="govuk-radios__item">
-                    <input class="govuk-radios__input" id="needHelp" name="needHelp" type="radio" value="general">
+                    <input class="govuk-radios__input" id="needHelp" name="need-help" type="radio" value="General help">
                     <label class="govuk-label govuk-radios__label" for="needHelp">
                       General help
                     </label>
                   </div>
                   <div class="govuk-radios__item">
-                    <input class="govuk-radios__input" id="needHelp-2" name="needHelp" type="radio" value="report">
+                    <input class="govuk-radios__input" id="needHelp-2" name="need-help" type="radio" value="Report a problem">
                     <label class="govuk-label govuk-radios__label" for="needHelp-2">
                       Report a problem
                     </label>
                   </div>
                   <div class="govuk-radios__item">
-                    <input class="govuk-radios__input" id="needHelp-3" name="needHelp" type="radio" value="gfa">
+                    <input class="govuk-radios__input" id="needHelp-3" name="need-help" type="radio" value="Request a change to my Grant Funding Agreement">
                     <label class="govuk-label govuk-radios__label" for="needHelp-3">
                       Request a change to my Grant Funding Agreement
                     </label>
