passing data - change request

--- a/app/views/ftf/change-request/help-triage.html
+++ b/app/views/ftf/change-request/help-triage.html
@@ -43,7 +43,7 @@
       
       
       
-    
+
 
 
             <div class="govuk-form-group">
@@ -55,19 +55,19 @@
                 </legend>
                 <div class="govuk-radios" data-module="govuk-radios">
                   <div class="govuk-radios__item">
-                    <input class="govuk-radios__input" id="needHelp" name="need-help" type="radio" value="General help">
+                    <input class="govuk-radios__input" id="needHelp" name="needHelp" type="radio" value="General help">
                     <label class="govuk-label govuk-radios__label" for="needHelp">
                       General help
                     </label>
                   </div>
                   <div class="govuk-radios__item">
-                    <input class="govuk-radios__input" id="needHelp-2" name="need-help" type="radio" value="Report a problem">
+                    <input class="govuk-radios__input" id="needHelp-2" name="needHelp" type="radio" value="Report a problem">
                     <label class="govuk-label govuk-radios__label" for="needHelp-2">
                       Report a problem
                     </label>
                   </div>
                   <div class="govuk-radios__item">
-                    <input class="govuk-radios__input" id="needHelp-3" name="need-help" type="radio" value="Request a change to my Grant Funding Agreement">
+                    <input class="govuk-radios__input" id="needHelp-3" name="needHelp" type="radio" value="Request a change to my Grant Funding">
                     <label class="govuk-label govuk-radios__label" for="needHelp-3">
                       Request a change to my Grant Funding Agreement
                     </label>
