--- a/app/views/ftf/change-request/check-answers.html
+++ b/app/views/ftf/change-request/check-answers.html
@@ -36,6 +36,7 @@
           <main class="govuk-main-wrapper " id="main-content" role="main">
             <div class="govuk-grid-row">
               <div class="govuk-grid-column-two-thirds-from-desktop">
+                
                 <h1 class="govuk-heading-l">Check your answers</h1>
                 
                 <dl class="govuk-summary-list govuk-!-margin-bottom-9">
@@ -44,7 +45,7 @@
                       What do you need help with?
                     </dt>
                     <dd class="govuk-summary-list__value">
-                      {{ data['need-help'] }}
+                      {{ data['needHelp'] }}
                     </dd>
                     <dd class="govuk-summary-list__actions">
                       <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> name</span></a>
@@ -55,7 +56,7 @@
                       What do you want to change?
                     </dt>
                     <dd class="govuk-summary-list__value">
-                      {{ data['change'] }}
+                      {{ data['changeRequest'] }}
                     </dd>
                     <dd class="govuk-summary-list__actions">
                       <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> name</span></a>
