--- a/app/views/ftf/change-request/select-reason.html
+++ b/app/views/ftf/change-request/select-reason.html
@@ -55,49 +55,49 @@
             </div>
             <div class="govuk-checkboxes" data-module="govuk-checkboxes">
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="change" name="change" type="checkbox" value="claim">
+                <input class="govuk-checkboxes__input" id="change" name="changeRequest" type="checkbox" value="claim">
                 <label class="govuk-label govuk-checkboxes__label" for="change">
                   Change a claim
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="change-2" name="change" type="checkbox" value="claim-dates">
+                <input class="govuk-checkboxes__input" id="change-2" name="changeRequest" type="checkbox" value="claim-dates">
                 <label class="govuk-label govuk-checkboxes__label" for="change-2">
                   Change claim dates
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="change-3" name="change" type="checkbox" value="item">
+                <input class="govuk-checkboxes__input" id="change-3" name="changeRequest" type="checkbox" value="item">
                 <label class="govuk-label govuk-checkboxes__label" for="change-3">
                   Change an item
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="change-4" name="change" type="checkbox" value="match-funding">
+                <input class="govuk-checkboxes__input" id="change-4" name="changeRequest" type="checkbox" value="match-funding">
                 <label class="govuk-label govuk-checkboxes__label" for="change-4">
                   Change to match funding
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="change-5" name="change" type="checkbox" value="specification">
+                <input class="govuk-checkboxes__input" id="change-5" name="changeRequest" type="checkbox" value="specification">
                 <label class="govuk-label govuk-checkboxes__label" for="change-5">
                   Change to specification
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="change-6" name="change" type="checkbox" value="outputs">
+                <input class="govuk-checkboxes__input" id="change-6" name="changeRequest" type="checkbox" value="outputs">
                 <label class="govuk-label govuk-checkboxes__label" for="change-6">
                   Change to outputs
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="change-7" name="change" type="checkbox" value="delay">
+                <input class="govuk-checkboxes__input" id="change-7" name="changeRequest" type="checkbox" value="delay">
                 <label class="govuk-label govuk-checkboxes__label" for="change-7">
                   Delay to outputs
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="change-8" name="change" type="checkbox" value="decrease">
+                <input class="govuk-checkboxes__input" id="change-8" name="changeRequest" type="checkbox" value="decrease">
                 <label class="govuk-label govuk-checkboxes__label" for="change-8">
                   Decrease grant amount
                 </label>
@@ -106,7 +106,7 @@
               
 
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="change-9" name="contact" type="checkbox" value="other" data-aria-controls="conditional-change-9">
+                <input class="govuk-checkboxes__input" id="change-9" name="changeRequest" type="checkbox" value="other" data-aria-controls="conditional-change-9">
                 <label class="govuk-label govuk-checkboxes__label" for="change-9">
                   Other
                 </label>
