Check answers for change request

--- a/app/views/ftf/activity-list/v3-0/index.html
+++ b/app/views/ftf/activity-list/v3-0/index.html
@@ -148,7 +148,12 @@ Water Management Grant - Round 3
       {
         href: "/manage-prototype/clear-data",
         text: "Clear data"
+      },
+      {
+        href: "/ftf/change-request/approved-email",
+        text: "Emails"
       }
+      
     ],
     visuallyHiddenTitle: "Footer links"
   }
