--- a/app/views/ftf/change-request/check-answers.html
+++ b/app/views/ftf/change-request/check-answers.html
@@ -45,10 +45,11 @@
                       What do you need help with?
                     </dt>
                     <dd class="govuk-summary-list__value">
-                      {{ data['needHelp'] }}
+                      Request a change to my Grant Funding Agreement
+                      
                     </dd>
                     <dd class="govuk-summary-list__actions">
-                      <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> name</span></a>
+                      <a class="govuk-link" href="help-triage">Change<span class="govuk-visually-hidden"> What do you need help with?</span></a>
                     </dd>
                   </div>
                   <div class="govuk-summary-list__row">
@@ -56,10 +57,10 @@
                       What do you want to change?
                     </dt>
                     <dd class="govuk-summary-list__value">
-                      {{ data['changeRequest'] }}
+                      {{ data['whatDoYouWantToChange'] }}
                     </dd>
                     <dd class="govuk-summary-list__actions">
-                      <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> name</span></a>
+                      <a class="govuk-link" href="select-reason">Change<span class="govuk-visually-hidden"> What do you want to change?</span></a>
                     </dd>
                   </div>
                   <div class="govuk-summary-list__row">
@@ -67,10 +68,10 @@
                       Explain why you need the change
                     </dt>
                     <dd class="govuk-summary-list__value">
-                      {{ data['moreDetail'] }}
+                      {{ data['explainChange'] }}
                     </dd>
                     <dd class="govuk-summary-list__actions">
-                      <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> date of birth</span></a>
+                      <a class="govuk-link" href="select-reason">Change<span class="govuk-visually-hidden"> Explain why you need the change </span></a>
                     </dd>
                   </div>
                   <div class="govuk-summary-list__row">
@@ -81,7 +82,7 @@
                       {{ data['moreDetail'] }}
                     </dd>
                     <dd class="govuk-summary-list__actions">
-                      <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> previous application number</span></a>
+                      <a class="govuk-link" href="describe-reason">Change<span class="govuk-visually-hidden"> previous application number</span></a>
                     </dd>
                   </div>
                   <div class="govuk-summary-list__row">
@@ -89,10 +90,10 @@
                       Uploaded evidence
                     </dt>
                     <dd class="govuk-summary-list__value">
-                      out-of-stock.jpg
+                      file-name.jpg
                     </dd>
                     <dd class="govuk-summary-list__actions">
-                      <a class="govuk-link" href="#">Change<span class="govuk-visually-hidden"> licence type</span></a>
+                      <a class="govuk-link" href="describe-reason">Change<span class="govuk-visually-hidden">upload evidence</span></a>
                     </dd>
                   </div>
                   
