--- a/app/views/ftf/change-request/describe-reason.html
+++ b/app/views/ftf/change-request/describe-reason.html
@@ -32,6 +32,8 @@
       </div>
     </div>
 
+    
+
     <div class="govuk-grid-row">
       
 
@@ -40,7 +42,7 @@
       <div class="govuk-grid-column-two-thirds">
       
       
-      
+        <form class="form" action="/ftf-describe-reason" method="post">
       
       
       
@@ -63,11 +65,13 @@
           <input class="govuk-file-upload" id="file-upload-1" name="fileUpload1" type="file">
         </div> 
       
-        <a href="check-answers">
+       
+         
           <button class="govuk-button" data-module="govuk-button" style="margin-bottom: 40px;">
             Continue
           </button>
-        </a>
+        </form>
+        
       
       
       
