FETF change request

--- a/app/views/fetf/agreement/v1-3/agreement-detail.html
+++ b/app/views/fetf/agreement/v1-3/agreement-detail.html
@@ -44,4 +44,12 @@ Agreement details
   </main>
 </div>
 
+<div class="app-contact-panel">
+  <h2 class="app-contact-panel__heading">Need help?</h2>
+
+  <p class="govuk-body app-contact-panel__body">
+    <a class="govuk-link" href="/fetf/change-request/help-triage">Contact the team</a>
+  </p>
+</div>
+
 {% endblock %}
