--- a/app/views/fetf/activity-list/v2-0/index.html
+++ b/app/views/fetf/activity-list/v2-0/index.html
@@ -50,4 +50,12 @@
 </div>
 </main>
 
+<div class="app-contact-panel">
+  <h2 class="app-contact-panel__heading">Need help?</h2>
+
+  <p class="govuk-body app-contact-panel__body">
+    <a class="govuk-link" href="/fetf/change-request/help-triage">Contact the team</a>
+  </p>
+</div>
+
 {% endblock %}
