--- a/app/views/fetf/agreement/v1-3/what-you-need-to-do.html
+++ b/app/views/fetf/agreement/v1-3/what-you-need-to-do.html
@@ -52,4 +52,12 @@ What you need to do
   </main>
 </div>
 
+<div class="app-contact-panel">
+  <h2 class="app-contact-panel__heading">Need help?</h2>
+
+  <p class="govuk-body app-contact-panel__body">
+    <a class="govuk-link" href="/fetf/change-request/help-triage">Contact the team</a>
+  </p>
+</div>
+
 {% endblock %}
