--- a/app/views/fetf/change-request/equipment.html
+++ b/app/views/fetf/change-request/equipment.html
@@ -142,7 +142,7 @@
 
   
 <div class="govuk-button-group">
-  <a class="govuk-button" href="item-quantity">
+  <a class="govuk-button" href="/fetf/change-request/item-quantity/{{ item.termName | lower | replace(' ', '-') }}"">
    
     Select this item
  
