--- a/app/views/fetf/change-request/item-quantity.html
+++ b/app/views/fetf/change-request/item-quantity.html
@@ -13,7 +13,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <form action="selected-items" method="post">
+    <form action="/fetf-add-to-changed-items" method="post">
       <input type="hidden" name="termName" value="{{ item.termName }}">
 
     <span class="govuk-caption-l">{{ item.title }} (FETF{{ item.itemCode }})</span>
