Routes fixed for the change request FETF

--- a/app/views/fetf/change-request/equipment-list.html
+++ b/app/views/fetf/change-request/equipment-list.html
@@ -53,7 +53,7 @@
 
 <span style="clear: both; display: inline-block;">
 <h3 id="linked-data" tabindex="-1" class="govuk-heading-m">
-  <a href="{{ item.termName | lower | replace(' ', '-') }}" class="govuk-link">{{ item.title }} (FETF{{ item.itemCode }})</a>
+  <a href="equipment/{{ item.termName | lower | replace(' ', '-') }}" class="govuk-link">{{ item.title }} (FETF{{ item.itemCode }})</a>
 </h3>
 
 <p class="govuk-body">{{ item.summary }}</p>
