Error message for change request FETF

--- a/app/views/fetf/change-request/equipment.html
+++ b/app/views/fetf/change-request/equipment.html
@@ -149,7 +149,7 @@
   </a>
  
 
-  <a class="govuk-button govuk-button--secondary" href="equipment-list">
+  <a class="govuk-button govuk-button--secondary" href="/fetf/change-request/equipment-list">
     
     View other items
     
