error message - updated to 1- 1000

--- a/app/views/fetf/change-request/selected-items.html
+++ b/app/views/fetf/change-request/selected-items.html
@@ -59,7 +59,7 @@
       }) }}
    
 
-    {% elseif grantTotal < 1000 %}
+    {% elseif grantTotal >= 1 and grantTotal <= 1000 %}
       {{ govukErrorSummary({
         titleText: "There is a problem",
         errorList: [
