--- a/app/views/fetf/change-request/selected-items.html
+++ b/app/views/fetf/change-request/selected-items.html
@@ -71,7 +71,7 @@
       }) }}
     {% endif %}
 
-   
+  
   
 
 
@@ -97,6 +97,14 @@
     <tbody class="govuk-table__body" >
       {% set grantTotal = 0 %}
       {% set scoreTotal = 0 %}
+      <tr class="govuk-table__row" id="selected-items__row">
+        <td class="govuk-table__cell add-item" id="selected-item-bold">Electronic row seeder</td>
+        <td class="govuk-table__cell add-code" id="selected-item" >FETF2</td>
+        <td class="govuk-table__cell add-quantity" id="selected-item">3&nbsp;&nbsp;<a href="edit" class="govuk-body-s">Edit</a></td>
+        <td class="govuk-table__cell add-grant" id="selected-item">£39,264.00</td>
+        <td class="govuk-table__cell add-score" id="selected-item">55</td>
+        <td class="govuk-table__cell"><a href="#" class="govuk-body-s" style="text-align: right;">Remove</a></td>
+      </tr>
       {% for item in data['selected-items'] %}
         {% set grantTotal = grantTotal + item.grantTotal %}
         {% set scoreTotal = scoreTotal + item.score %}
