--- a/app/views/fetf/change-request/selected-items.html
+++ b/app/views/fetf/change-request/selected-items.html
@@ -95,8 +95,9 @@
     </tr>
   </thead>
     <tbody class="govuk-table__body" >
-      {% set grantTotal = 0 %}
-      {% set scoreTotal = 0 %}
+
+ <!-- Dummy row -->
+      
       <tr class="govuk-table__row" id="selected-items__row">
         <td class="govuk-table__cell add-item" id="selected-item-bold">Electronic row seeder</td>
         <td class="govuk-table__cell add-code" id="selected-item" >FETF2</td>
@@ -105,6 +106,10 @@
         <td class="govuk-table__cell add-score" id="selected-item">55</td>
         <td class="govuk-table__cell"><a href="#" class="govuk-body-s" style="text-align: right;">Remove</a></td>
       </tr>
+<!-- End of dummy row -->
+
+      {% set grantTotal = 0 %}
+      {% set scoreTotal = 0 %}
       {% for item in data['selected-items'] %}
         {% set grantTotal = grantTotal + item.grantTotal %}
         {% set scoreTotal = scoreTotal + item.score %}
