--- a/app/views/fetf/change-request/selected-items.html
+++ b/app/views/fetf/change-request/selected-items.html
@@ -111,7 +111,7 @@
       {% set grantTotal = 0 %}
       {% set scoreTotal = 0 %}
       {% for item in data['selected-items'] %}
-        {% set grantTotal = grantTotal + item.grantTotal %}
+        {% set grantTotal = grantTotal + item.grantTotal  %}
         {% set scoreTotal = scoreTotal + item.score %}
         <tr class="govuk-table__row" id="selected-items__row">
           <td class="govuk-table__cell add-item" id="selected-item-bold">{{ item.title }}</td>
@@ -126,8 +126,8 @@
         <th scope="row" class="govuk-table__cell" id="mobile-hide"><strong>Total requested grant amount</strong></th>
         <td class="govuk-table__cell" id="mobile-hide"></td>
         <td class="govuk-table__cell" id="mobile-hide"></td>
-        <td class="govuk-table__cell add-total-grant"id="selected-item" ><strong> {{ grantTotal | currency }}</strong></td>
-        <td class="govuk-table__cell add-total-score" id="selected-item"><strong>{{ scoreTotal/data['selected-items'].length}}</strong></td>
+        <td class="govuk-table__cell add-total-grant"id="selected-item" ><strong> {{ (grantTotal + 13088) | currency }}</strong></td>
+        <td class="govuk-table__cell add-total-score" id="selected-item"><strong>{{ (scoreTotal + 55)/(data['selected-items'].length +1)}}</strong></td>
       <td class="govuk-table__cell" id="mobile-hide"></td>
       </tr>
     </tbody>
