--- a/app/views/fetf/change-request/task-list.html
+++ b/app/views/fetf/change-request/task-list.html
@@ -1,4 +1,4 @@
-{% extends "layouts/main-agreement-round-2.html" %}
+{% extends "layouts/main-fetf.html" %}
 
 {% block pageTitle %}
 Water Management Grant - Round 3
