--- a/app/views/ftf/change-request/reminder-email.html
+++ b/app/views/ftf/change-request/reminder-email.html
@@ -126,7 +126,7 @@
         <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
 
 
-          <strong style="cursor: pointer;" onclick="navigateToPage()">Subject line:</strong> Submitted: Slurry Infrastructure grant funding agreement change request<br><br>
+          <strong style="cursor: pointer;" onclick="navigateToPage()">Subject line:</strong> Reminder: Sign your Slurry Infrastructure grant funding agreement<br><br>
 
           <script>
             function navigateToPage() {
@@ -145,9 +145,14 @@
             <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
               Dear John Smith,<br><br>
             
-              We have received your request to change your Slurry Infrastructure grant funding agreement. <br><br>
-              The RPA will review your request and let you know the outcome.<br><br>
-              You cannot request another change until this request is resolved.
+              Your grant funding agreement is ready for you to read and accept. <br><br>
+              You must read and accept the agreement by 11:59pm on <strong>13 October 2024</strong> or the offer will expire and we cannot award you a grant.<br><br>
+              You cannot request another change until this request is resolved.<br><br>
+              <a href="/_common/not-testing.html">Read and accept your grant funding agreement</a><br><br>
+              Once you’ve reviewed and accepted your agreement, you can download a copy for your own records.<br><br><br>
+
+              <strong>If you do not want to accept your agreement</strong><br><br>
+              If you do not want to accept your agreement, you should <a href="/_common/not-testing.html">withdraw your application</a>.<br>
             </p>
 
 						
