--- a/app/views/fetf/change-request/rejected-email.html
+++ b/app/views/fetf/change-request/rejected-email.html
@@ -126,7 +126,7 @@
         <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
 
 
-          <strong style="cursor: pointer;" onclick="navigateToPage()">Subject line:</strong> Change request rejected: Slurry Infrastructure grant<br><br>
+          <strong style="cursor: pointer;" onclick="navigateToPage()">Subject line:</strong> Change request rejected: FETF: Productivity grant <br><br>
 
           <script>
             function navigateToPage() {
@@ -137,17 +137,33 @@
           
 
           <strong>Business name:</strong> Imaginary Farms Ltd<br>
-          <strong>Grant:</strong> Slurry Infrastructure Grant<br>
-          <strong>Project reference:</strong> SI-VMA-1234</p>
+          <strong>Grant:</strong> Farming Equipment and Technology Fund: Productivity grant <br>
+          <strong>Project reference:</strong> HDJ2123F</p>
         
           <br>      
      
             <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
               Dear John Smith,<br><br>
             
-              We have received your request to change your Slurry Infrastructure grant funding agreement. <br><br>
-              The RPA will review your request and let you know the outcome.<br><br>
-              You cannot request another change until this request is resolved.
+              Your request to change your Farming Equipment and Technology Fund: Productivity grant funding agreement has been rejected. <br><br><br>
+              <strong>What you need to do</strong><br><br>
+              You can still accept your original grant funding agreement.<br><br>
+              You must read and accept the agreement by 11:59pm on <strong>13 October 2024 </strong>or the offer will expire and we cannot award you a grant.<br><br>
+ 
+              <a href="/_common/not-testing.html">Read and accept your grant funding agreement</a>
+              <br><br>
+              
+              Once you’ve reviewed and accepted your agreement, you can download a copy for your own records.
+              
+            </p>
+            <br>
+            <strong>If you do not want to accept your agreement</strong><br><br>
+            If you do not want to accept your agreement, you should <a href="/_common/not-testing.html">withdraw your application</a>.
+
+            <br><br>
+ 
+              
+
             </p>
 
 						
@@ -167,7 +183,7 @@
               </p>
 
               <p class="govuk-body"><strong>Email</strong><br>
-              <a href="/_common/not-testing.html">FTF@rpa.gov.uk</a></p>
+              <a href="/_common/not-testing.html">FETFenquiries@rpa.gov.uk</a></p>
             </div> 
   
            <br>
