--- a/app/views/fetf/change-request/approved-email.html
+++ b/app/views/fetf/change-request/approved-email.html
@@ -126,7 +126,7 @@
         <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
 
 
-          <strong style="cursor: pointer;" onclick="navigateToPage()">Subject line:</strong> Change request approved: Slurry Infrastructure grant<br><br>
+          <strong style="cursor: pointer;" onclick="navigateToPage()">Subject line:</strong> Change request approved: FETF: Productivity grant <br><br>
 
           <script>
             function navigateToPage() {
@@ -137,15 +137,15 @@
           
 
           <strong>Business name:</strong> Imaginary Farms Ltd<br>
-          <strong>Grant:</strong> Slurry Infrastructure<br>
-          <strong>Project reference:</strong> SI-VMA-1234</p>
+          <strong>Grant:</strong> Farming Equipment and Technology Fund: Productivity grant <br>
+          <strong>Project reference:</strong> HDJ2123F</p>
         
           <br>      
      
             <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
               Dear John Smith,<br><br>
             
-              Your request to change your Slurry Infrastructure grant funding agreement has been approved.
+              Your request to change your Farming Equipment and Technology Fund: Productivity grant funding agreement has been approved.
             </p>
 
             <div class="govuk-details__text">
@@ -165,7 +165,7 @@
 
               <div class="govuk-details__text">
                 <strong>If you do not want to accept your agreement</strong><br><br>
-                If you do not want to accept your agreement, you should <a href="">withdraw your application</a>.
+                If you do not want to accept your agreement, you should <a href="#">withdraw your application</a>.
   
        
 						
@@ -187,7 +187,7 @@
               </p>
 
               <p class="govuk-body"><strong>Email</strong><br>
-              <a href="/_common/not-testing.html">FTF@rpa.gov.uk</a></p>
+              <a href="/_common/not-testing.html">FETFenquiries@rpa.gov.uk</a></p>
             </div> 
   
            <br>
