--- a/app/views/fetf/change-request/reminder-email.html
+++ b/app/views/fetf/change-request/reminder-email.html
@@ -126,7 +126,7 @@
         <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
 
 
-          <strong style="cursor: pointer;" onclick="navigateToPage()">Subject line:</strong> Submitted: Slurry Infrastructure grant funding agreement change request<br><br>
+          <strong style="cursor: pointer;" onclick="navigateToPage()">Subject line:</strong> Reminder: Sign your Slurry Infrastructure grant funding agreement<br><br>
 
           <script>
             function navigateToPage() {
@@ -137,18 +137,23 @@
           
 
           <strong>Business name:</strong> Imaginary Farms Ltd<br>
-          <strong>Grant:</strong> Slurry Infrastructure Grant<br>
-          <strong>Project reference:</strong> SI-VMA-1234</p>
+          <strong>Grant:</strong> Farming Equipment and Technology Fund: Productivity grant <br>
+          <strong>Project reference:</strong> HDJ2123F</p>
         
           <br>      
      
-            <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
-              Dear John Smith,<br><br>
-            
-              We have received your request to change your Slurry Infrastructure grant funding agreement. <br><br>
-              The RPA will review your request and let you know the outcome.<br><br>
-              You cannot request another change until this request is resolved.
-            </p>
+          <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
+            Dear John Smith,<br><br>
+          
+            Your grant funding agreement is ready for you to read and accept. <br><br>
+            You must read and accept the agreement by 11:59pm on <strong>13 October 2024</strong> or the offer will expire and we cannot award you a grant.<br><br>
+            You cannot request another change until this request is resolved.<br><br>
+            <a href="/_common/not-testing.html">Read and accept your grant funding agreement</a><br><br>
+            Once you’ve reviewed and accepted your agreement, you can download a copy for your own records.<br><br><br>
+
+            <strong>If you do not want to accept your agreement</strong><br><br>
+            If you do not want to accept your agreement, you should <a href="/_common/not-testing.html">withdraw your application</a>.<br>
+          </p>
 
 						
             <hr style="margin: 30px 0;">
@@ -167,7 +172,7 @@
               </p>
 
               <p class="govuk-body"><strong>Email</strong><br>
-              <a href="/_common/not-testing.html">FTF@rpa.gov.uk</a></p>
+              <a href="/_common/not-testing.html">FETFenquiries@rpa.gov.uk</a></p>
             </div> 
   
            <br>
@@ -178,7 +183,7 @@
             <br><br><br>
       
       
-            <a href="../../fetf/activity-list/v3-0/index?status=08&eoi=03b&apply=03b&agree=02a&claim-01=01&claim-02=0&claim-03=0">Back to task list </a>
+            <a href="../../fetf/activity-list/v2-0/index?fetf-status=02&fetf-apply=03b&fetf-agree=02a&fetf-claim=01">Back to task list </a>
 
 
             
