--- a/app/views/fetf/change-request/submitted-email.html
+++ b/app/views/fetf/change-request/submitted-email.html
@@ -126,7 +126,7 @@
         <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
 
 
-          <strong style="cursor: pointer;" onclick="navigateToPage()">Subject line:</strong> Submitted: Slurry Infrastructure grant funding agreement change request<br><br>
+          <strong style="cursor: pointer;" onclick="navigateToPage()">Subject line:</strong> Submitted: FETF: Productivity grant funding agreement change request<br><br>
 
           <script>
             function navigateToPage() {
@@ -137,15 +137,15 @@
           
 
           <strong>Business name:</strong> Imaginary Farms Ltd<br>
-          <strong>Grant:</strong> Slurry Infrastructure Grant<br>
-          <strong>Project reference:</strong> SI-VMA-1234</p>
+          <strong>Grant:</strong> Farming Equipment and Technology Fund: Productivity grant <br>
+          <strong>Project reference:</strong> HDJ2123F</p>
         
           <br>      
      
             <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
               Dear John Smith,<br><br>
             
-              We have received your request to change your Slurry Infrastructure grant funding agreement. <br><br>
+              We have received your request to change your Farming Equipment and Technology Fund: Productivity grant funding agreement.<br><br>
               The RPA will review your request and let you know the outcome.<br><br>
               You cannot request another change until this request is resolved.
             </p>
@@ -167,7 +167,7 @@
               </p>
 
               <p class="govuk-body"><strong>Email</strong><br>
-              <a href="/_common/not-testing.html">FTF@rpa.gov.uk</a></p>
+              <a href="/_common/not-testing.html">FETFenquiries@rpa.gov.uk</a></p>
             </div> 
   
            <br>
@@ -178,7 +178,7 @@
             <br><br><br>
       
       
-            <a href="../../fetf/activity-list/v3-0/index?status=08&eoi=03b&apply=03b&agree=02a&claim-01=01&claim-02=0&claim-03=0">Back to task list </a>
+            <a href="approved-email">Next email</a>
 
 
             
