--- a/app/views/ftf/agreement/v2-0/what-you-need-to-do.html
+++ b/app/views/ftf/agreement/v2-0/what-you-need-to-do.html
@@ -37,10 +37,19 @@ What you need to do
           <p class="govuk-body">If you do not want to accept your agreement, you should <a href="/_common/not-testing.html">withdraw your application</a>.</p>
         </span>
 
+        
+
         {% include "../../_includes/details-block_agreement-questions-contact.html" %}
+      <br><br>
+        <div class="app-contact-panel">
+          <h2 class="app-contact-panel__heading">Need help?</h2>
+          <p class="govuk-body app-contact-panel__body">
+            <a class="govuk-link" href="../../change-request/help-triage">Contact the team</a>
+          </p>
+        </div>
+     
+
       
-      
-      </div>
       <div class="govuk-grid-column-one-third">
         <!-- SIDE COLUMN BLOCK -->
       </div>
