--- a/app/views/ftf/change-request/approved-email.html
+++ b/app/views/ftf/change-request/approved-email.html
@@ -137,7 +137,7 @@
           
 
           <strong>Business name:</strong> Imaginary Farms Ltd<br>
-          <strong>Grant:</strong> Slurry Infrastructure<br>
+          <strong>Grant:</strong> Slurry Infrastructure grant<br>
           <strong>Project reference:</strong> SI-VMA-1234</p>
         
           <br>      
@@ -147,7 +147,7 @@
             
               Your request to change your Slurry Infrastructure grant funding agreement has been approved.
             </p>
-
+            <br>
             <div class="govuk-details__text">
               <strong>What you need to do</strong><br><br>
               Your grant funding agreement is ready for you to read and accept.<br><br>
@@ -161,7 +161,7 @@
 
               Once you've reviewed and accepted your agreement, you can download a copy for your own records.
 
-              <br><br>
+              <br><br><br>
 
               <div class="govuk-details__text">
                 <strong>If you do not want to accept your agreement</strong><br><br>
