--- a/app/views/ftf/change-request/check-answers.html
+++ b/app/views/ftf/change-request/check-answers.html
@@ -104,7 +104,7 @@
                 <form action="thank-you" method="post" novalidate>
                   <input type="hidden" name="answers-checked" value="true">
                   <button type="submit" class="govuk-button" data-module="govuk-button">
-                    Send
+                    Submit request
                   </button>
                 </form>
               </div>
