--- a/app/views/ftf/change-request/describe-reason.html
+++ b/app/views/ftf/change-request/describe-reason.html
@@ -68,7 +68,7 @@
        
          
           <button class="govuk-button" data-module="govuk-button" style="margin-bottom: 40px;">
-            Continue
+            Save and continue
           </button>
         </form>
         
