--- a/app/views/ftf/change-request/submitted-email.html
+++ b/app/views/ftf/change-request/submitted-email.html
@@ -178,7 +178,7 @@
             <br><br><br>
       
       
-            <a href="approved-email">Next email</a>
+            <a href="../../ftf/activity-list/v3-0/index?status=08&eoi=03b&apply=03b&agree=02a&claim-01=01&claim-02=0&claim-03=0">Go to task list </a>
 
 
             
