--- a/app/views/fetf/change-request/upload-evidence.html
+++ b/app/views/fetf/change-request/upload-evidence.html
@@ -46,18 +46,9 @@
       
       
       
-        <div class="govuk-form-group">
-          <h1 class="govuk-label-wrapper">
-            <label class="govuk-label govuk-label--l" for="more-detail">
-              Upload evidence
-            </label>
-          </h1>
-          
-        </div>
+        
 
-        <br>
-
-        <h2 class="govuk-heading-m">Upload evidence (optional)</h2>
+        <h1 class="govuk-heading-l">Upload evidence (optional)</h1>
         <div class="govuk-form-group">
           <label class="govuk-label" for="file-upload-1">
             Upload a file
@@ -68,7 +59,7 @@
        
          
           <button class="govuk-button" data-module="govuk-button" style="margin-bottom: 40px;">
-            Continue
+            Save and continue
           </button>
         </form>
         
